removes nested rows to fix margin bug on mobile

--- a/source/_sass/_custom.scss
+++ b/source/_sass/_custom.scss
@@ -246,3 +246,15 @@ and (max-width: 799px) {
   }
 
 }
+
+.search-box-container {
+  margin: 0 auto;
+  max-width: 65%;
+}
+
+@media only screen
+and (max-width: 799px) {
+  .search-box-container {
+    max-width: 90%;
+  }
+}
